--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,8 @@ keywords = ["template-python-cmd"]
 license = { text = "BSD 3-Clause License" }
 classifiers = ["Programming Language :: Python :: 3"]
 dependencies = [
-
+    "setenvironment >= 2.0.2",
+    "pyflutterinstall",
 ]
 # Change this with the version number bump.
 # Also make the change in zcmds/version.py
